Created empty fragments and base navigation

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,9 +9,9 @@
         android:icon="@drawable/ic_search"
         android:title="@string/search" />
     <item
-        android:id="@+id/bookmarkFragment"
+        android:id="@+id/bookmarksFragment"
         android:icon="@drawable/ic_bookmark"
-        android:title="@string/bookmark" />
+        android:title="@string/bookmarks" />
     <item
         android:id="@+id/profileFragment"
         android:icon="@drawable/ic_profile"
