--- a/app/src/main/res/values/text_styles.xml
+++ b/app/src/main/res/values/text_styles.xml
@@ -11,7 +11,114 @@
 
     <style name="Text.Header">
         <item name="fontFamily">@font/chomsky</item>
-        <item name="android:textSize">32sp</item>
+        <item name="android:textSize">36sp</item>
     </style>
+
+    <!--Semibold-->
+    <style name="Text.Semibold">
+        <item name="fontFamily">@font/manrope_semi_bold</item>
+    </style>
+
+    <style name="Text.Semibold.24">
+        <item name="android:textSize">24sp</item>
+        <item name="lineHeight">28.8sp</item>
+    </style>
+
+    <style name="Text.Semibold.20">
+        <item name="android:textSize">20sp</item>
+        <item name="lineHeight">20sp</item>
+    </style>
+
+    <style name="Text.Semibold.16">
+        <item name="android:textSize">16sp</item>
+        <item name="lineHeight">24sp</item>
+    </style>
+
+    <style name="Text.Semibold.14">
+        <item name="android:textSize">14sp</item>
+        <item name="lineHeight">16sp</item>
+
+    </style>
+
+    <style name="Text.Semibold.10">
+        <item name="android:textSize">10sp</item>
+        <item name="lineHeight">12sp</item>
+    </style>
+
+    <!--Medium-->
+    <style name="Text.Medium">
+        <item name="fontFamily">@font/manrope_medium</item>
+    </style>
+
+    <style name="Text.Medium.18">
+        <item name="android:textSize">18sp</item>
+        <item name="lineHeight">27sp</item>
+    </style>
+
+    <style name="Text.Medium.16">
+        <item name="lineHeight">24sp</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Text.Medium.14">
+        <item name="android:textSize">14sp</item>
+        <item name="lineHeight">16sp</item>
+    </style>
+
+    <style name="Text.Medium.12">
+        <item name="android:textSize">12sp</item>
+        <item name="lineHeight">16sp</item>
+    </style>
+
+    <style name="Text.Medium.10">
+        <item name="lineHeight">15sp</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+<!--    <style name="Text.Medium.10.Grey">-->
+<!--        <item name="android:textColor">@color/grey</item>-->
+<!--    </style>-->
+
+    <!--Regular-->
+    <style name="Text.Regular">
+        <item name="fontFamily">@font/manrope_regular</item>
+    </style>
+
+    <style name="Text.Regular.18">
+        <item name="lineHeight">27sp</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="Text.Regular.14">
+        <item name="lineHeight">21sp</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+<!--    <style name="Text.Regular.14.Grey">-->
+<!--        <item name="android:textColor">@color/grey</item>-->
+<!--    </style>-->
+
+    <style name="Text.Regular.12">
+        <item name="lineHeight">18sp</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+<!--    <style name="Text.Regular.12.Grey">-->
+<!--        <item name="android:textColor">@color/grey</item>-->
+<!--    </style>-->
+
+    <!--Light-->
+    <style name="Text.Light">
+        <item name="fontFamily">@font/manrope_light</item>
+    </style>
+
+    <style name="Text.Light.12">
+        <item name="lineHeight">16sp</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+<!--    <style name="Text.Light.12.Grey">-->
+<!--        <item name="android:textColor">@color/grey_profile_text</item>-->
+<!--    </style>-->
 
 </resources>
