--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="green_deep">#D5E7CD</color>
+    <color name="green_light">#FCFDF7</color>
+    <color name="green_middle">#EAF0E6</color>
 </resources>
