--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,22 +19,39 @@
             app:liftOnScrollTargetViewId="@id/rv_trending_news">
 
             <androidx.appcompat.widget.Toolbar
-                app:titleTextAppearance="@style/Text.Header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="?attr/actionBarSize"
                 app:layout_scrollFlags="scroll|enterAlways|snap"
-                app:title="The New York Times" />
+                app:title="The New York Times"
+                app:titleTextAppearance="@style/Text.Header" />
 
-            <com.google.android.material.progressindicator.LinearProgressIndicator
-                android:id="@+id/progress"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:indeterminate="true"
-                android:visibility="gone"
-                app:indicatorColor="?attr/colorSecondary" />
+            <HorizontalScrollView
+                app:layout_scrollFlags="scroll|enterAlways|snap"
+                android:id="@+id/hv_chips"
+                android:scrollbars="none"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.chip.ChipGroup
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:id="@+id/chips_section"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingHorizontal="16dp"
+                    app:chipSpacing="8dp"
+                    app:singleSelection="true"/>
+
+            </HorizontalScrollView>
 
         </com.google.android.material.appbar.AppBarLayout>
+
+        <com.google.android.material.progressindicator.LinearProgressIndicator
+            android:id="@+id/progress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:visibility="visible"
+            app:indicatorColor="?attr/colorSecondary" />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipe_refresh"
@@ -43,12 +60,12 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:paddingHorizontal="8dp"
-                android:paddingBottom="64dp"
                 android:id="@+id/rv_trending_news"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clipToPadding="false"
+                android:paddingHorizontal="8dp"
+                android:paddingBottom="64dp"
                 tools:listitem="@layout/item_article_big" />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
