Article fragment updated + cases/data/di/repo

--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -11,57 +11,182 @@
 
     </data>
 
-    <ScrollView
-        android:background="?android:colorBackground"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:paddingHorizontal="16dp"
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            app:liftOnScroll="true"
+            app:liftOnScrollTargetViewId="@id/rv_trending_news">
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tv_title"
-                android:layout_marginTop="16dp"
-                android:layout_marginStart="96dp"
-                android:layout_width="0dp"
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{article.title}"
-                android:textAllCaps="true"
-                android:textAppearance="@style/Text.Semibold.24"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:text="Sample article title text for layout test" />
+                app:contentInsetStartWithNavigation="88dp"
+                app:layout_scrollFlags="scroll|enterAlways|snap"
+                app:menu="@menu/article_menu"
+                app:navigationIcon="@drawable/ic_back"
+                app:title="@{article.byline}"
+                app:titleTextAppearance="@style/Text.Semibold.14" />
 
-            <ImageView
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_title"
-                android:id="@+id/iv_photo"
-                imageUrl="@{article.photos[1].url}"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:scaleType="centerCrop"
-                app:layout_constraintDimensionRatio="7:4"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:src="@tools:sample/backgrounds/scenic" />
+        </com.google.android.material.appbar.AppBarLayout>
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tv_abstract"
-                android:layout_marginTop="16dp"
-                android:layout_width="0dp"
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/scroll"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="?android:colorBackground"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{article.abstract}"
-                android:textAppearance="@style/Text.Semibold.16"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_photo"
-                app:layout_constraintEnd_toEndOf="parent"
-                tools:text="@tools:sample/lorem/random" />
+                android:paddingHorizontal="16dp">
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="72dp"
+                    android:text="@{article.title}"
+                    android:textAllCaps="true"
+                    android:textAppearance="@style/Text.Semibold.24"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="Sample article title text for layout test" />
 
-    </ScrollView>
 
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_section"
+                    android:layout_width="0dp"
+                    android:alpha="0.5"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="@{article.section}"
+                    android:textAllCaps="true"
+                    android:textAppearance="@style/Text.Semibold.14"
+                    app:layout_constraintEnd_toEndOf="@id/iv_photo"
+                    app:layout_constraintStart_toStartOf="@id/tv_title"
+                    app:layout_constraintTop_toBottomOf="@id/tv_title"
+                    tools:text="Section" />
+
+                <ImageView
+                    android:id="@+id/iv_photo"
+                    imageUrl="@{article.photos[1].url}"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="16dp"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintDimensionRatio="7:4"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_section"
+                    tools:src="@tools:sample/backgrounds/scenic" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_abstract"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="@{article.abstract}"
+                    android:textAppearance="@style/Text.Semibold.16"
+                    app:layout_constraintEnd_toEndOf="@id/iv_photo"
+                    app:layout_constraintStart_toStartOf="@id/iv_photo"
+                    app:layout_constraintTop_toBottomOf="@id/iv_photo"
+                    tools:text="Abstract text" />
+
+                <com.google.android.material.divider.MaterialDivider
+                    android:id="@+id/divider_1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintEnd_toEndOf="@id/tv_title"
+                    app:layout_constraintStart_toStartOf="@id/tv_title"
+                    app:layout_constraintTop_toBottomOf="@id/tv_abstract" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_text"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/tmp_article_text"
+                    android:textAppearance="@style/Text.Semibold.16"
+                    app:layout_constraintEnd_toEndOf="@id/tv_title"
+                    app:layout_constraintStart_toStartOf="@id/tv_title"
+                    app:layout_constraintTop_toBottomOf="@id/divider_1"
+                    tools:text="Abstract text" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_date"
+                    android:gravity="end"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    date="@{article.published_date}"
+                    android:textAllCaps="true"
+                    android:textAppearance="@style/Text.Semibold.14"
+                    android:alpha="0.5"
+                    app:layout_constraintEnd_toEndOf="@id/tv_title"
+                    app:layout_constraintStart_toStartOf="@id/tv_title"
+                    app:layout_constraintTop_toBottomOf="@id/tv_text"
+                    tools:text="Date" />
+
+                <com.google.android.material.divider.MaterialDivider
+                    android:id="@+id/divider_2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_date" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_source"
+                    android:layout_width="0dp"
+                    android:gravity="start"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/source"
+                    android:textAllCaps="true"
+                    android:textAppearance="@style/Text.Semibold.14"
+                    app:layout_constraintEnd_toEndOf="@id/tv_title"
+                    app:layout_constraintStart_toStartOf="@id/tv_title"
+                    app:layout_constraintTop_toBottomOf="@id/divider_2"
+                    tools:text="Source" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_share"
+                    android:layout_width="0dp"
+                    android:gravity="start"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/share"
+                    android:textAllCaps="true"
+                    android:textAppearance="@style/Text.Semibold.14"
+                    app:layout_constraintEnd_toEndOf="@id/tv_title"
+                    app:layout_constraintStart_toStartOf="@id/tv_title"
+                    app:layout_constraintTop_toBottomOf="@id/tv_source"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="16dp"
+                    tools:text="Share" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_comments"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|start"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_comment"
+            app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior" />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
