--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,13 @@
         <item name="cardCornerRadius">8dp</item>
     </style>
 
+    <style name="HintCardStyle" parent="Widget.Material3.CardView.Elevated">
+        <item name="elevation"> 0dp</item>
+        <item name="cardElevation">0dp</item>
+        <item name="android:elevation">0dp</item>
+        <item name="cardCornerRadius">8dp</item>
+        <item name="strokeWidth">2dp</item>
+        <item name="android:backgroundTint">@android:color/transparent</item>
+    </style>
+
 </resources>
