--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,11 +33,11 @@
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.chip.ChipGroup
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
                     android:id="@+id/chips_section"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingHorizontal="16dp"
+                    android:paddingBottom="8dp"
                     app:chipSpacing="8dp"
                     app:singleSelection="true"/>
 
