--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,9 +6,16 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="grey">#B0B0B0</color>
     <color name="white">#FFFFFFFF</color>
 
     <color name="green_deep">#D5E7CD</color>
     <color name="green_light">#FCFDF7</color>
     <color name="green_middle">#EAF0E6</color>
+
+    <color name="boxStrokeFocused">@color/green_middle</color>
+    <color name="boxStrokeUnfocused">@color/green_middle</color>
+    <color name="boxBackground">@color/green_middle</color>
+
+    <color name="hintColor">@color/grey</color>
 </resources>
