--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,27 @@
         <item name="cornerSize">4dp</item>
     </style>
 
+    <style name="TextInputLayoutSearch" parent="Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
+        <item name="boxStrokeColor">@drawable/box_stroke_color_selector</item>
+        <item name="boxCornerRadiusTopEnd">22dp</item>
+        <item name="boxCornerRadiusTopStart">22dp</item>
+        <item name="boxCornerRadiusBottomEnd">22dp</item>
+        <item name="boxCornerRadiusBottomStart">22dp</item>
+        <item name="boxStrokeWidth">0dp</item>
+        <item name="boxStrokeWidthFocused">0dp</item>
+        <item name="errorTextAppearance">@style/Text.Regular.12</item>
+        <item name="hintTextAppearance">@style/Text.Medium.12</item>
+        <item name="hintTextColor">@color/hintColor</item>
+        <item name="errorIconDrawable">@null</item>
+        <item name="endIconTint">@color/hintColor</item>
+        <item name="startIconTint">@color/hintColor</item>
+        <item name="boxBackgroundColor">@color/boxBackground</item>
+        <item name="android:textColorHint">@color/hintColor</item>
+    </style>
+
+    <style name="TextInputEditTextSearch">
+        <item name="android:textAppearance">@style/Text.Medium.14</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
 </resources>
